// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Header render the component 1`] = `
<DocumentFragment>
  <header
    class="sc-bdnxRM hjGVAm"
  >
    <img
      alt="Logo"
      class="sc-gKAaRy"
      height="45"
      src="test-file-stub"
      width="124"
    />
    <div
      class="sc-gtsrHT ljPrYI"
    >
      <div
        class="sc-hKFxyN ikhIOv"
      >
        <span
          class="sc-eCApnc jfAvdG"
        >
          Eder
        </span>
        <span
          class="sc-jSFjdj cjDpPs"
        >
          Sair
        </span>
      </div>
      <img
        alt="Eder"
        class="sc-dlnjwi jXpYGt"
        src="https://i.scdn.co/image/ab6775700000ee85ffd83d8fd3711add44d62317"
      />
    </div>
  </header>
</DocumentFragment>
`;

exports[`[Component]: Header render the component without user info 1`] = `
<DocumentFragment>
  <header
    class="sc-bdnxRM hjGVAm"
  >
    <img
      alt="Logo"
      class="sc-gKAaRy"
      height="45"
      src="test-file-stub"
      width="124"
    />
  </header>
</DocumentFragment>
`;
